Allow creating new classes